Close annotations (#82)
* Add AnnotatedMixin

* Add apply_annotations for all fetches, collection annotations

* Add annotator endpoint dependency

* Fix failing tests

* Add migration command to fix overwritten annotations

* Refresh client

* Add trailing commas

* Add black, reformat files

* Add black format on save
